<resources>
    <string name="app_name">Shopping Planner Free</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="intro_message">Plan your needs, make Economy!</string>
    <string name="title_activity_main_menu">Main Menu</string>
    <string name="title_activity_shopping_list">Shopping List</string>
    <string name="product">Product</string>
    <string name="quantity">Quantity</string>
    <string name="product_kind">Category</string>
    <string name="price">Price</string>
    <string name="brand">Brand</string>
    <string name="name">Name:</string>
    <string name="existing">Existing:</string>
    <string name="type">Type:</string>
    <string name="address">Address:</string>
    <string name="area">Area:</string>
    <string name="country">Country:</string>
    <string name="city">City</string>
    <string name="zip">Zip</string>
    <string name="total_spending">Total Spending:</string>
    <string name="shop">Shop</string>
    <string name="no_shop">no shop provided</string>
    <string name="title_activity_stats">StatsActivity</string>
    <string name="euro">Euro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="total_cost">Total Cost:</string>
    <string name="zero">0</string>
    <string name="title_activity_set_lists">Favorite Shopping Lists</string>
    <string name="available_shops">Available Shops</string>
    <string name="title_activity_saved_lists">Saved Lists</string>
    <string name="list_name">List Name:</string>
    <string name="one">1</string>
    <string name="street_name">street</string>
    <string name="street_number">number</string>
    <string name="title_activity_fool_main">FoolMainActivity</string>
    <string name="pick_date">Pick Date</string>
    <string-array name="currencies">
        <item>USD</item>
        <item>EUR</item>
        <item>GBP</item>
        <item>RUB</item>
        <item>CNY</item>
        <item>JPY</item>
        <item>AED</item>
        <item>AFN</item>
        <item>ALL</item>
        <item>AMD</item>
        <item>ANG</item>
        <item>AOA</item>
        <item>ARS</item>
        <item>AUD</item>
        <item>AWG</item>
        <item>AZN</item>
        <item>BAM</item>
        <item>BBD</item>
        <item>BDT</item>
        <item>BGN</item>
        <item>BHD</item>
        <item>BIF</item>
        <item>BMD</item>
        <item>BND</item>
        <item>BOB</item>
        <item>BRL</item>
        <item>BSD</item>
        <item>BTC</item>
        <item>BTN</item>
        <item>BWP</item>
        <item>BYR</item>
        <item>BZD</item>
        <item>CAD</item>
        <item>CDF</item>
        <item>CHF</item>
        <item>CLF</item>
        <item>CLP</item>
        <item>COP</item>
        <item>CRC</item>
        <item>CUP</item>
        <item>CVE</item>
        <item>CZK</item>
        <item>DJF</item>
        <item>DKK</item>
        <item>DOP</item>
        <item>DZD</item>
        <item>EEK</item>
        <item>EGP</item>
        <item>ETB</item>
        <item>FJD</item>
        <item>FKP</item>
        <item>GEL</item>
        <item>GHS</item>
        <item>GIP</item>
        <item>GMD</item>
        <item>GNF</item>
        <item>GTQ</item>
        <item>GYD</item>
        <item>HKD</item>
        <item>HNL</item>
        <item>HRK</item>
        <item>HTG</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>IQD</item>
        <item>IRR</item>
        <item>ISK</item>
        <item>JEP</item>
        <item>JMD</item>
        <item>JOD</item>
        <item>KES</item>
        <item>KGS</item>
        <item>KHR</item>
        <item>KMF</item>
        <item>KPW</item>
        <item>KRW</item>
        <item>KWD</item>
        <item>KYD</item>
        <item>KZT</item>
        <item>LAK</item>
        <item>LBP</item>
        <item>LKR</item>
        <item>LRD</item>
        <item>LSL</item>
        <item>LTL</item>
        <item>LVL</item>
        <item>LYD</item>
        <item>MAD</item>
        <item>MDL</item>
        <item>MGA</item>
        <item>MKD</item>
        <item>MMK</item>
        <item>MNT</item>
        <item>MOP</item>
        <item>MRO</item>
        <item>MTL</item>
        <item>MUR</item>
        <item>MVR</item>
        <item>MWK</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>MZN</item>
        <item>NAD</item>
        <item>NGN</item>
        <item>NIO</item>
        <item>NOK</item>
        <item>NPR</item>
        <item>NZD</item>
        <item>OMR</item>
        <item>PAB</item>
        <item>PEN</item>
        <item>PGK</item>
        <item>PHP</item>
        <item>PKR</item>
        <item>PLN</item>
        <item>PYG</item>
        <item>QAR</item>
        <item>RON</item>
        <item>RSD</item>
        <item>RWF</item>
        <item>SAR</item>
        <item>SBD</item>
        <item>SCR</item>
        <item>SDG</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>SHP</item>
        <item>SLL</item>
        <item>SOS</item>
        <item>SRD</item>
        <item>STD</item>
        <item>SVC</item>
        <item>SYP</item>
        <item>SZL</item>
        <item>THB</item>
        <item>TJS</item>
        <item>TMT</item>
        <item>TND</item>
        <item>TOP</item>
        <item>TRY</item>
        <item>TTD</item>
        <item>TWD</item>
        <item>TZS</item>
        <item>UAH</item>
        <item>UGX</item>
        <item>UYU</item>
        <item>UZS</item>
        <item>VEF</item>
        <item>VND</item>
        <item>VUV</item>
        <item>WST</item>
        <item>XAF</item>
        <item>XAG</item>
        <item>XAU</item>
        <item>XCD</item>
        <item>XDR</item>
        <item>XOF</item>
        <item>XPF</item>
        <item>YER</item>
        <item>ZAR</item>
        <item>ZMK</item>
        <item>ZMW</item>
        <item>ZWL</item>
    </string-array>
    <string name="title_activity_settings">Settings Activity</string>
    <string name="currency">Currency</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="standard_rate">VAT Standard Rate (%)</string>
    <string name="reduced_rate">VAT Reduced Rate (%)</string>
    <string name="buyer">Buyer</string>
    <string name="export">Export</string>
    <string name="import_db">Import</string>
    <string name="database">Database</string>
    <string name="title_activity_database_menu">Manage Local Database</string>
    <string name="title_activity_exchange_rates">Exchange Rates</string>
    <string-array name="product_categories">
        <item>Food</item>
        <item>Drink</item>
        <item>Health</item>
        <item>Household</item>
        <item>Clothes</item>
        <item>Entertainment</item>
        <item>Office</item>
        <item>Insurance</item>
        <item>Loan</item>
        <item>Home Equipment</item>
        <item>Travel</item>
        <item>Bills</item>
        <item>Personal Care</item>
        <item>Children/Baby Products</item>
        <item>Rent</item>
        <item>Subscriptions</item>
        <item>Taxes</item>
        <item>Electronics</item>
        <item>Tobaccos</item>
        <item>Vehicle</item>
        <item>Pet</item>
        <item>Other</item>
    </string-array>
    <string name="shop_types">Shop Types</string>
    <string name="unlock">Unlock</string>
    <string name="about_text">Version 0.9.2. Copyright 2013.</string>
    <string name="new_list">New List</string>
    <string name="statistics">Statistics</string>
    <string name="favorite_lists">Favorite Lists</string>
    <string name="help">Help</string>
    <string name="add_entries">Add purchase entries</string>
    <string name="save_favorite_list">Save List to Favorite lists</string>
    <string name="save_temporary">Temporary save list for next time you open application</string>
    <string name="scan_barcode">Scan Barcode</string>
    <string name="add_product">Add new product to list</string>
</resources>