<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >

    <TextView
        android:id="@+id/currencySettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currency"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Spinner
            android:id="@+id/currencySettingsSpinner"
            android:layout_width="193dp"
            android:layout_height="wrap_content"
            android:entries="@array/currency_names" />

        <Button
            android:id="@+id/unlockCurrecnyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unlock" />

    </LinearLayout>

    <TextView
        android:id="@+id/vatStandrdSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/standard_rate"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/vatStandrdSettingsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/vatReducedSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reduced_rate"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/vatReducedSettingsEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/databaseSettingsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/database"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/dbSettingsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/loadDBButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_db" />

        <Button
            android:id="@+id/saveDBButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/export" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/saveSettingsButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/settingsAdMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
    </LinearLayout>

</LinearLayout>