<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DatabaseMenuActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <Button
            android:id="@+id/manageProductsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product" />

        <Button
            android:id="@+id/manageBuyersButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buyer" />

        <Button
            android:id="@+id/manageProductCategoriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/product_categories" />

        <Button
            android:id="@+id/manageShopCategoriesButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shop_types" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/manageDatabaseAdMob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal" >
    </LinearLayout>

</RelativeLayout>