<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/productAddDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <AutoCompleteTextView
            android:id="@+id/productAddDialogEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10" >

            <requestFocus />
        </AutoCompleteTextView>

    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/brandAddDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brand"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/brandAddDialogEditText"
            android:layout_width="161dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.62"
            android:ems="10" />
    </LinearLayout>
    
     <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/priceAddDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/priceAddDialogEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="numberDecimal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/quantityAddDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/numberAddDialogEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one"
            android:ems="10"
            android:inputType="number" />

        <ImageButton
            android:id="@+id/numberAddAddDialogImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_input_add" />

        <ImageButton
            android:id="@+id/numberRemoveAddDialogImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_delete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/productGroupAddDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_group"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/productGroupAddDialogSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/productKindAddDialogTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/product_kind"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Spinner
            android:id="@+id/productKindAddDialogSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>

</LinearLayout>